--- a/RightFax-It.vbproj
+++ b/RightFax-It.vbproj
@@ -144,6 +144,7 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="Resources\fax.ico" />
   </ItemGroup>
   <ItemGroup>
